# Person-following-robot

./: .gitignore  Commands.txt  README.md
src/segway/Widowx-Turret-gazebo/widowx_turret/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/segway/Widowx-Turret-gazebo/widowx_turret_controller/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
src/segway/Widowx-Turret-gazebo/widowx_turret_controller/config/: 60-widowx_turret.rules  servos.yaml  widowx_control.yaml
src/segway/Widowx-Turret-gazebo/widowx_turret_controller/launch/: widowx_turret_controller.launch  widowx_turret_gazebo_controller.launch
src/segway/Widowx-Turret-gazebo/widowx_turret_controller/src/: pt_cmd.cpp  pt_cmd_py.py  trial.py
src/segway/Widowx-Turret-gazebo/widowx_turret_description/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/segway/Widowx-Turret-gazebo/widowx_turret_description/launch/: load_description.launch  widowx_turret_rviz.launch
src/segway/Widowx-Turret-gazebo/widowx_turret_description/meshes/: MX_28T.stl  hinge.stl  servo_horn.stl  servos_base.stl  side.stl  top_plate.stl  turret_base.stl
src/segway/Widowx-Turret-gazebo/widowx_turret_description/robots/: widowx_turret.urdf.xacro
src/segway/Widowx-Turret-gazebo/widowx_turret_description/urdf/: common_materials.xacro  widowx_turret.urdf.xacro
src/segway/robot/: CMakeLists.txt  package.xml
src/segway/robot/launch/: display.launch  gazebo.launch
src/segway/robot/meshes/: ara_parca_link.STL  base_link.STL  kabuk_link.STL  kafa_link.STL  pt_link.STL
src/segway/robot/rviz/: rviz_cfg.rviz
src/segway/robot/src/: main.cpp
src/segway/robot/urdf/: rmp.urdf.xacro  robot.csv  robot.urdf
src/segway/robot/worlds/: example.world
src/segway/segway_v3/segway_msgs/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/segway/segway_v3/segway_msgs/msg/: AuxPower.msg  Configuration.msg  Dynamics.msg  Propulsion.msg  Status.msg
src/segway/segway_v3/segway_navigation/segway_navigation/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/segway/segway_v3/segway_navigation/segway_navigation_apps/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/segway/segway_v3/segway_navigation/segway_navigation_apps/config/RMP_110/: move_base_params.yaml
src/segway/segway_v3/segway_navigation/segway_navigation_apps/config/RMP_210/: amcl.yaml  base_planner_params.yaml  costmap_common_params.yaml  gmapping.yaml
src/segway/segway_v3/segway_navigation/segway_navigation_apps/launch/: 2d_map_nav_demo.launch  2d_mapless_nav_demo.launch  assisted_teleop_demo.launch  gmapping_demo.launch  move_base.launch
src/segway/segway_v3/segway_navigation/segway_navigation_apps/maps/: garage_map.yaml
src/segway/segway_v3/segway_ros/: CHANGELOG.rst  CMakeLists.txt  package.xml  setup.py
src/segway/segway_v3/segway_ros/cfg/: segway.cfg
src/segway/segway_v3/segway_ros/launch/: segway_startup.launch
src/segway/segway_v3/segway_ros/src/segway/: crc16.py  faultlog_parser.py  io_eth.py  io_usb.py  move_base.py  segway_comm.py  segway_control_marker.py  segway_data_classes.py  segway_system_wd.py  segway_teleop.py  system_defines.py  utils.py
src/segway/segway_v3/segway_v3/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/segway/segway_v3/segway_v3_config/: CMakeLists.txt  package.xml  segway_config.bash
src/segway/segway_v3/segway_v3_config/env-hooks/: 50.segway_config.bash.em
src/segway/segway_v3/segway_v3_config/std_configs/: segway_config_RMP_110_Wide_Navigator.bash  segway_config_RMP_210.bash  segway_config_RMP_210_Navigator.bash  segway_config_RMP_210_Navigator_Elite.bash  segway_config_RMP_220.bash  segway_config_RMP_220_Navigator.bash  segway_config_RMP_440.bash  segway_config_RMP_440_Navigator.bash  segway_config_RMP_OMNI.bash  segway_config_RMP_OMNI_Navigator.bash
src/segway/segway_v3/si_utils/: CMakeLists.txt  package.xml
src/segway/segway_v3_robot/segway_bringup/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/segway/segway_v3_robot/segway_bringup/launch/: stanley_innovation_system.launch
src/segway/segway_v3_robot/segway_bringup/launch/localization/: segway_odometry.launch
src/segway/segway_v3_robot/segway_bringup/launch/platform/: segway.launch
src/segway/segway_v3_robot/segway_bringup/launch/sensors/: segway_sensors.launch
src/segway/segway_v3_robot/segway_bringup/launch/teleop/: segway_teleop.launch
src/segway/segway_v3_robot/segway_bringup/scripts/: install_segway_core  uninstall_segway_core
src/segway/segway_v3_robot/segway_sensor_filters/segway_sensor_filters/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/segway/segway_v3_robot/segway_upstart/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
src/segway/segway_v3_robot/segway_upstart/src/segway_upstart/: job.py  providers.py
src/segway/segway_v3_robot/segway_upstart/templates/: job-start.em  job.conf.em
src/segway/segway_v3_robot/segway_upstart/test/: test_basics.py
src/segway/segway_v3_robot/segway_v3_robot/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/segway/segway_v3_robot/third_party_sensors/third_party_sensors/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/segway/segway_v3_simulator/segway_gazebo/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/segway/segway_v3_simulator/segway_gazebo/launch/: segway_empty_world.launch  segway_playpen.launch  spawn_segway.launch  stanley_innovation_system_sim.launch  test3.launch
src/segway/segway_v3_simulator/segway_gazebo/rviz/: example.rviz
src/segway/segway_v3_simulator/segway_gazebo/worlds/: example.world
src/segway/segway_v3_simulator/segway_sim_control/: CHANGELOG.rst  CMakeLists.txt  package.xml
src/segway/segway_v3_simulator/segway_sim_control/config/control/: RMP_110_WIDE.yaml  RMP_220_control.yaml  RMP_440SE_control.yaml  RMP_OMNI_control.yaml
src/segway/segway_v3_simulator/segway_sim_control/launch/: RMP_110_control.launch  RMP_210_control.launch  RMP_220_control.launch  RMP_440LE_control.launch  RMP_440SE_control.launch  RMP_OMNI_control.launch
src/target_generation/: CMakeLists.txt  package.xml
src/target_generation/src/: target_generation_node.cpp  target_generation_node.h
(+139 files in other folders)
