<?xml version="1.0"?>
<package>
  <name>widowx_turret_description</name>
  <version>0.0.2</version>
  <description>The widowx_turret_description package</description>
  
  <author email="jmrapado@robotnik.es">Jose Rapado</author>

  <maintainer email="jmrapado@robotnik.es">Jose Rapado</maintainer>
  <maintainer email="rnavarro@robotnik.es">Román Navarro</maintainer>
  
  <license>BSD</license>


  <url type="website">http://ros.org/wiki/widowx_turret_description</url>
  <url type="repository">https://github.com/RobotnikAutomation/widowx_turret.git</url>
  <url type="bugtracker">https://github.com/RobotnikAutomation/widowx_turret/issues</url>


  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>urdf</build_depend>
  <build_depend>xacro</build_depend>
  <run_depend>urdf</run_depend>
  <run_depend>xacro</run_depend>



  <export>


  </export>
</package>
