<?xml version="1.0"?>
<package>
  <name>segway_v3_config</name>
  <version>0.0.1</version>
  <description>Configuration for Segway RMP V3 platforms</description>
  <maintainer email="rmp@stanleyinnovation.com">Patrick Hussey</maintainer>
  <url type="website">http://ros.org/wiki/segway_rmp_v3</url>
  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export>
  </export>
</package>
