<package format="2">
    <name>si_utils</name>
    <version>0.0.1</version>
    <description>System launch file and environment hooks for various utilities</description>
    
    <maintainer email="RMP@stanleyinnovation.com">Stanley Innovation, Inc.</maintainer>
    <license>BSD</license>
    <url type="website">http://ros.org/wiki/segway_rmp_v3</url>
    <author>Patrick Hussey</author>

    <buildtool_depend>catkin</buildtool_depend>
    
    <test_depend>roslaunch</test_depend>

</package>
