<?xml version="1.0"?>
<package>
  <name>segway_upstart</name>
  <version>1.0.0</version>
  <description>
    The segway_upstart package is a modified version of robot_upstart which is tailored specifically
    for bringing up Segway RMP V3 platforms the original author, Mike Purvis, maintains robot_upstart
    separately from this package, this package should only be used with Segway based platforms 
  </description>

  <maintainer email="rmp@stanleyinnovation.com">Patrick Hussey</maintainer>
  <author email="mpurvis@clearpathrobotics.com">Mike Purvis</author>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslint</build_depend>
  <run_depend>daemontools</run_depend>
  <run_depend>roslaunch</run_depend>
  <test_depend>rosunit</test_depend>

  <export>
    <architecture_independent/>
    <rosdoc config="rosdoc.yaml"/>
  </export>
</package>
