<?xml version="1.0"?>
<package>
  <name>segway_v3_robot</name>
  <version>0.0.1</version>
  <description>Metapackage for Segway V3 robot software</description>
  <maintainer email="rmp@stanleyinnovation.com">Patrick Hussey</maintainer>
  <url type="website">http://ros.org/wiki/segway_rmp_v3</url>

  <license>BSD</license>


  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>segway_bringup</run_depend>
  <run_depend>segway_sensor_filters</run_depend>
  <run_depend>segway_upstart</run_depend>
  <run_depend>third_party_sensors</run_depend>
  <run_depend>segway_v3</run_depend>

  <export>
    <metapackage/>
  </export>
</package>
