<?xml version="1.0"?>
<package>

  <name>segway_gazebo</name>
  <version>1.0.0</version>
  <description>Segway V3 gazebo simulation bringup</description>

  <maintainer email="dev@stanleyinnovation.com">Patrick Hussey</maintainer>

  <license>BSD</license>

  <url type="website">http://ros.wiki.org/Robots/RMPv3</url>
  <url type="bugtracker">https://github.com/stanleyinnovation/segway_v3_simulator/issues</url>
  <url type="repository">https://github.com/stanleyinnovation/segway_v3_simulator</url>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>roslaunch</build_depend>
  <run_depend>controller_manager</run_depend>
  <run_depend>gazebo_plugins</run_depend>
  <run_depend>gazebo_ros</run_depend>
  <run_depend>gazebo_ros_control</run_depend>
  <run_depend>hector_gazebo_plugins</run_depend>
  <run_depend>segway_sim_control</run_depend>
  <run_depend>segway_description</run_depend>
  <run_depend>pointcloud_to_laserscan</run_depend>
  <run_depend>robot_state_publisher</run_depend>
  <run_depend>rostopic</run_depend>

  <export>
  </export>
</package>
